@@ -1,5 +1,5 @@
 #
-# Copyright CEA/DAM/DIF (2008, 2009, 2010, 2011)
+# Copyright CEA/DAM/DIF (2008-2014)
 #  Contributor: Stephane THIELL <stephane.thiell@cea.fr>
 #
 # This file is part of the ClusterShell library.
@@ -154,3 +154,5 @@ class WorkerSsh(WorkerRsh):
 
     SHELL_CLASS = Ssh
     COPY_CLASS = Scp
+
+WORKER_CLASS=WorkerSsh
